# hackathon-tt-py-qbikk

./: ROADMAP.md  SOLUTION.md  requirements.txt
evaluate/checks/results/: latest.json
helptools/: setup_ghostfolio_scaffold_for_tt.py
translations/ghostfolio_pytx/: base_imports.txt  class_init.py  domain_helpers.py  helpers.py  method_stubs.py  tt_config.json  tt_import_map.json
translations/ghostfolio_pytx/app/implementation/portfolio/calculator/roai/: portfolio_calculator.py  portfolio_calculator_translated.py
tt/: pyproject.toml
tt/tests/: test_codegen.py  test_lib_map.py  test_parser.py
tt/tt/: cli.py  codegen.py  lib_map.py  parser.py  runner.py  translator.py  ts_emit.py  ts_names.py  ts_to_py.py
tt/tt/scaffold/ghostfolio_pytx/: tt_import_map.json
