[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tt"
version = "0.1.0"
description = "Translation tool - copies implementation from ghostfolio_pytx_example"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pytest>=8.2",
    "requests>=2.32",
    "tree-sitter>=0.25.2",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
tt = "tt.cli:main"

[tool.setuptools.packages]
find = {}
